# advent-of-code-2023

./: .gitignore  Cargo.toml  README.md  benchmarks.txt  justfile
.github/workflows/: rust.yml
day-0/: README.md
day-0/src/: main.rs
day-00/: Cargo.toml
day-00/src/: main.rs
day-01/: Cargo.toml  README.md  temp.txt
day-01/src/: main.rs
day-02/: Cargo.toml  README.md
day-02/src/: main.rs
day-03/: Cargo.toml  README.md
day-03/src/: main.rs
day-04/: Cargo.toml  README.md
day-04/src/: main.rs
day-05/: Cargo.toml  README.md
day-05/src/: main.rs
day-06/: Cargo.toml  README.md
day-06/src/: main.rs
day-07/: Cargo.toml  README.md
day-07/src/: joker.rs  main.rs  normal.rs
day-08/: Cargo.toml  README.md
day-08/src/: main.rs
day-09/: Cargo.toml  README.md
day-09/benches/: benchmarks.rs
day-09/src/: lib.rs  main.rs
day-10/: Cargo.toml  README.md
day-10/benches/: benchmarks.rs
day-10/src/: lib.rs
day-11/: Cargo.toml  README.md
day-11/benches/: benchmarks.rs
day-11/src/: lib.rs
day-12/: Cargo.toml  README.md
day-12/benches/: benchmarks.rs
day-12/src/: lib.rs
template/: Cargo.toml  README.md
template/benches/: benchmarks.rs
template/src/: lib.rs
