[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
thiserror = "1.0.50"
