[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }

[dev-dependencies]
divan = "0.1.5"
rstest = "0.18.2"

[[bench]]
name = "{{project-name}}-bench"
path = "benches/benchmarks.rs"
harness = false
